--- a/index.ipynb
+++ b/index.ipynb
@@ -565,7 +565,7 @@
    ],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
-    "    for res\n",
+    "    for restaurant in restaurants:\n",
     "        return list(filter(lambda restaurant: restaurant['price'] = '1', open_restaurants))"
    ]
   },
