Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -551,23 +551,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "lambda cannot contain assignment (<ipython-input-55-a05b4e24ce94>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-55-a05b4e24ce94>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return list(filter(lambda restaurant: restaurant['price'] = '1', open_restaurants))\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m lambda cannot contain assignment\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def cheapest_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
-    "        \n",
-    "        return list(filter(lambda restaurant: restaurant['price'] = '1', open_restaurants))"
+    "        return list(filter(lambda restaurant: restaurant['price'], open_restaurants))"
    ]
   },
   {
