--- a/index.ipynb
+++ b/index.ipynb
@@ -603,6 +603,7 @@
    "outputs": [],
    "source": [
     "def sufficiently_reviewed_restaurants(restaurants):\n",
+    "    ret\n",
     "    pass"
    ]
   },
